# Heterogeneous-Exploration

debug/: CMakeLists.txt  package.xml
debug/launch/: debug.launch
debug/src/: debug.cpp
evaluation/: CMakeLists.txt  package.xml
evaluation/launch/: evaluation.launch
evaluation/plot_graph/: aep_1.txt  aep_2.txt  aep_3.txt  aep_4.txt  aep_5.txt  he_1.txt  he_2.txt  he_3.txt  he_4.txt  he_5.txt  histogram.py  office_aep_1.txt  office_aep_2.txt  office_aep_3.txt  office_aep_4.txt  office_aep_5.txt  office_aep_6.txt  office_aep_7.txt  office_aep_8.txt  office_he_1.txt  office_he_2.txt  office_he_3.txt  office_he_4.txt  office_he_5.txt  office_he_6.txt  office_he_7.txt  office_he_8.txt  office_ib_1.txt  office_ib_2.txt  office_ib_3.txt  office_ib_4.txt  office_ib_5.txt  office_ib_6.txt  office_ib_7.txt  office_ib_8.txt  plot.py  plot_several.py  plot_sevral.py  rooms_aep_1.txt  rooms_aep_2.txt  (+49 more)
evaluation/src/: evaluation.cpp
he_launch/: CMakeLists.txt  package.xml
he_launch/config/: px4_config_1.yaml  px4_config_2.yaml
he_launch/config_aep/: exploration.yaml
he_launch/config_aep/aep/: stl_iris_1.yaml  stl_iris_2.yaml
he_launch/config_aep/aep_office/: stl_iris_1.yaml  stl_iris_2.yaml
he_launch/config_aep/he/: stl_iris_1.yaml  stl_iris_2.yaml
he_launch/config_aep/ib/: stl_iris_1.yaml  stl_iris_2.yaml
he_launch/launch/: exp.launch  exp2.launch  gazebo.launch  test.launch  uavs_octomap.launch
he_launch/launch/exploration/: exploration.launch  fly_to.launch  octomap_server.launch  pig_cpp.launch  stl_aeplanner_nodelet.launch
he_launch/launch/octomap_central_server/: octomap_central_server.launch
he_launch/launch/uavs/: camera_uav.launch  lidar_uav.launch  posix_sitl.launch  single_vehicle_spawn.launch  uavs.launch
he_launch/models/Untitled/: model.sdf
he_launch/models/hokuyo_lidar/: hokuyo_lidar.sdf
he_launch/models/office/: model.sdf
he_launch/models/primesense/: primesense.sdf
he_launch/models/simple/: model.sdf
he_launch/models/square_building/: model.config  model.sdf
he_launch/models/uav/: iris_1.sdf  iris_2.sdf  uav.sdf
he_launch/scripts/: 1_run.sh  2_uavs.sh  3_exploration.sh  4_exploration2.sh  4_services.sh  5_services_iris1.sh  6_services_iris1.sh
he_launch/scripts/office/aep/: 1_run.sh  2_uavs.sh  6_services_iris2.sh
he_launch/scripts/office/he/: 3_exploration.sh
he_launch/scripts/rooms/aep/: 1_run.sh  2_uavs.sh  3_exploration.sh
he_launch/scripts/rooms/he/: 2_uavs.sh
he_launch/scripts/rooms/ib/: 2_uavs.sh
he_launch/scripts/run_all/: run_all.sh  run_one.sh
he_launch/scripts/simple/ib/: 3_exploration.sh
he_launch/worlds/: rooms.world  simple.world  simple2.world
multi_robot_collision/: CMakeLists.txt  package.xml
multi_robot_collision/include/multi_robot_collision/: multi_robot_collision.h
multi_robot_collision/launch/: 1_multi_robot_collision.launch  2_multi_robot_collision.launch  3_multi_robot_collision.launch  multi_robot_collision.launch
multi_robot_collision/scripts/: call.sh  run.sh
multi_robot_collision/src/: multi_robot_collision.cpp  publisher.cpp  test.cpp
multi_robot_collision/srv/: add_line_segment.srv
octomap_central_server/: CMakeLists.txt  package.xml
octomap_central_server/launch/: pc_handle.launch
octomap_central_server/src/: octomap_central_server.cpp  pc_handle.cpp
pigain/include/pigain/: pig.h
pigain/src/: pig.cpp
plot_graph/: test1.txt  test2.txt
stl_aeplanner/: CMakeLists.txt  package.xml
stl_aeplanner/include/stl_aeplanner/: multi_robot_collision.h  param.h  stl_aeplanner.h  stl_aeplanner_viz.h
stl_aeplanner/launch/: 1_multi_robot_collision.launch  2_multi_robot_collision.launch  3_multi_robot_collision.launch  multi_robot_collision.launch
stl_aeplanner/src/: multi_robot_collision.cpp  param.cpp  publisher.cpp  stl_aeplanner.cpp  stl_aeplanner_viz.cpp  test.cpp
stl_aeplanner_msgs/: CMakeLists.txt
stl_aeplanner_msgs/msg/: line_segment.msg
stl_aeplanner_msgs/srv/: add_line_segment.srv
stl_evaluation/data/empty_room_big/stl_1/: map.txt  pose.txt  stats.txt
stl_evaluation/data/empty_room_big/stl_12/: map.txt
stl_evaluation/data/empty_room_big/stl_13/: map.txt  pose.txt  stats.txt
stl_evaluation/data/empty_room_big/stl_14/: info.txt
stl_evaluation/data/empty_room_big/stl_15/: stats.txt
stl_evaluation/data/empty_room_big/stl_17/: pose.txt
stl_evaluation/data/empty_room_big/stl_2/: map.txt  pose.txt  stats.txt
stl_evaluation/data/empty_room_big/stl_23/: pose.txt
stl_evaluation/data/empty_room_big/stl_24/: pose.txt
stl_evaluation/data/empty_room_big/stl_25/: pose.txt
stl_evaluation/data/empty_room_big/stl_26/: pose.txt
stl_evaluation/data/empty_room_big/stl_27/: pose.txt
stl_evaluation/data/empty_room_big/stl_28/: pose.txt
stl_evaluation/data/empty_room_big/stl_29/: pose.txt
stl_evaluation/data/empty_room_big/stl_3/: map.txt  pose.txt  stats.txt
stl_evaluation/data/empty_room_big/stl_30/: map.txt  pose.txt  stats.txt
stl_evaluation/data/empty_room_big/stl_31/: map.txt  pose.txt
stl_evaluation/data/empty_room_big/stl_32/: map.txt  pose.txt
stl_evaluation/data/empty_room_big/stl_33/: map.txt  pose.txt  stats.txt
stl_evaluation/data/empty_room_big/stl_34/: map.txt  pose.txt  stats.txt
stl_evaluation/data/empty_room_big/stl_35/: pose.txt
stl_evaluation/data/empty_room_big/stl_36/: pose.txt
stl_evaluation/data/empty_room_big/stl_37/: pose.txt
stl_evaluation/data/empty_room_big/stl_38/: pose.txt
stl_evaluation/data/empty_room_big/stl_39/: pose.txt
stl_evaluation/data/empty_room_big/stl_4/: map.txt  pose.txt  (+1 more)
stl_exploration/: CMakeLists.txt
stl_exploration/config/: exploration.yaml
stl_exploration/launch/: exploration.launch  laserscan_to_pointcloud.launch
stl_exploration/src/: fly_to.cpp  stl_exploration.cpp
stl_frontier_planner/src/: stl_frontier_planner.cpp
(+54 files in other folders)
