<?xml version="1.0"?>
<package format="2">
	<name>debug</name>
	<version>0.0.0</version>
	<description>The debug package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example:  -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="belo@todo.todo">belo</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>


	<build_depend>roscpp</build_depend>
	<build_depend>octomap_world</build_depend>
	<build_depend>geometry_msgs</build_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>octomap_world</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
