<?xml version="1.0"?>
<package format="2">
	<name>multi_robot_collision</name>
	<version>0.0.0</version>
	<description>The multi_robot_collision package</description>

	<maintainer email="belo@todo.todo">belo</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>tf2</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>cmake_modules</build_depend>
  
	<exec_depend>roscpp</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>tf</exec_depend>
	<exec_depend>tf2</exec_depend>
	<exec_depend>visualization_msgs</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>


	<export>

	</export>
</package>
